# hot_potato

./: .gitignore  .gitignore.txt  AI_RULES.md  CMakeLists.txt  README.md  setup.bat
main/: CMakeLists.txt  SoundManager.cpp  SoundManager.hpp  game_logic.cpp  game_logic.h  idf_component.yml  ir_downlink_test.cpp  ir_downlink_test.h  ir_simple_test.cpp  ir_simple_test.h  ir_uplink_test.cpp  ir_uplink_test.h  main.cpp  main.cpp.local_backup  zt_test_mode.cpp  zt_test_mode.h
